# PneuTrunk

./: README.md
pneutrunk_bringup/launch/: pneutrunk_launch.py
pneutrunk_description/: CMakeLists.txt
pneutrunk_description/launch/: vizualize_launch.py
pneutrunk_description/meshes/: base.stl
pneutrunk_description/urdf/: pneutrunk.xacro  pneutrunk_table_macro.xacro  robot.urdf  segment_macro.xacro
pneutrunk_gesture_control/: package.xml  setup.py
pneutrunk_gesture_control/pneutrunk_gesture_control/: gesture_control.py  keypoint_classifier.py  point_history_classifier.py
pneutrunk_gui/: CMakeLists.txt  package.xml
pneutrunk_gui/Forms/: mainwindow.ui
pneutrunk_gui/Headers/: mainwindow.h  ros_module.h
pneutrunk_gui/Sources/: main.cpp  mainwindow.cpp  ros_module.cpp
pneutrunk_msgs/msg/: PneutrunkJointState.msg  SegmentState.msg
pneutrunk_object_detection/pneutrunk_object_detection/: object_detection.py
pneutrunk_rviz_plugin/include/pneutrunk_rviz_plugin/: pneutrunk_plugin.h
pneutrunk_rviz_plugin/src/: pneutrunk_plugin.cpp
pneutrunk_tools/: CMakeLists.txt
pneutrunk_tools/include/pneutrunk_tools/: continuum_kinematics.h  continuum_model.h
pneutrunk_tools/src/: continuum_kinematics.cpp  continuum_model.cpp  main.cpp
